@@ -1,1 +1,2 @@
 usr/lib/*/*.so.*
+usr/share/ukui-search/translations/libsearch/*.qm
