@@ -1,3 +1,9 @@
+ukui-search (0.0.1+0123) v101; urgency=medium
+
+  * Bugs Fixed.
+
+ -- zhangpengfei <zhangpengfei@kylinos.cn>  Sat, 23 Jan 2021 13:53:53 +0800
+
 ukui-search (0.0.1+0120) v101; urgency=medium
 
   * Bugs Fixed.
